<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
	<string name="app_name">BlueVvnx</string>
	<string name="lblsrvc">lblsrvc</string>
    <string name="lbl_1">label_1</string>
    <string name="lbl_2">label_2</string>
    <string name="txt_btn_1">Connect()</string>
    <string name="txt_btn_2">Start_FG svc</string>
    <string name="txt_btn_3">Disconnect()</string>
    <string name="txt_btn_4">Stop svc</string>
    <string name="txt_btn_5">Action()</string>
	<string-array name="bdaddr_array">
	<item>30:AE:A4:04:C3:5A</item>	
	<item>24:62:AB:D7:6E:E6</item>
	<item>24:62:AB:D7:2D:42</item>	
</string-array>
</resources>
