<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

	<Button
	android:id="@+id/button_1"
	android:layout_height="wrap_content"
	android:layout_width="wrap_content"
	android:layout_alignParentLeft="true"
	android:text="@string/txt_btn_1"
	android:onClick="ActionPressBouton_1" />

	<Button
	android:id="@+id/button_2"
	android:layout_height="wrap_content"
	android:layout_width="wrap_content"
	android:layout_below="@+id/button_1"
	android:text="@string/txt_btn_2"
	android:onClick="ActionPressBouton_2" />
	
	<Button
	android:id="@+id/button_3"
	android:layout_height="wrap_content"
	android:layout_width="wrap_content"
	android:layout_alignParentRight="true"
	android:text="@string/txt_btn_3"
	android:onClick="ActionPressBouton_3" />
	
	<Button
	android:id="@+id/button_4"
	android:layout_height="wrap_content"
	android:layout_width="wrap_content"
	android:layout_alignParentRight="true"
	android:layout_below="@+id/button_3"
	android:text="@string/txt_btn_4"
	android:onClick="ActionPressBouton_4" />
	
	<Button
	android:id="@+id/button_5"
	android:layout_height="wrap_content"
	android:layout_width="wrap_content"
	android:layout_alignParentRight="true"
	android:layout_alignParentBottom="true"
	android:text="@string/txt_btn_5"
	android:onClick="ActionPressBouton_5" />
	
	<TextView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/text1"	
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:textSize="30sp"
    android:text="@string/lbl_1" />    
    
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/text2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/text1"
    android:textSize="18sp"
    android:text="@string/lbl_2" />    
    
    <Spinner
    android:id="@+id/bdaddr_spinner"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/text2"
     />
	
</RelativeLayout>  
